fix: Fix a bug where loading previous chat messages does not set the scroll position correctly in the chat component on Safari

--- a/src/app/page/group/chat/chat.component.scss
+++ b/src/app/page/group/chat/chat.component.scss
@@ -52,6 +52,8 @@
   width: 400px;
   height: 100%;
   overflow: auto;
+  position: fixed;
+
 }
 
 .footer {
